# stream-nexus

./: .env  .env.default  .gitignore  Cargo.toml  README.md
js/: observer.js  seed.js
js/feed/: kick.js  odysee.js  rumble.js  twitch.js  vk.js  x.js  youtube.js
public/: dashboard.css  dashboard.js  script.js  style.css  user-colors.css
src/: exchange.rs  main.rs  message.rs  sneed_env.rs
src/feed/: mod.rs  odysee.rs  rumble.rs  twitch.rs  youtube.rs
src/web/: client.rs  message.rs  mod.rs  server.rs
templates/: chat.html  dashboard.html  index.html  macros.html  message.html  overlay.html
