[package]
name = "stream-nexus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0"
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14.0"
chrono = "0.4.26"
dotenvy = "0.15"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
rand = "0.8.5"
reqwest = "0.11.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.29.1"
uuid = { version = "1.4.1", features = ['v4', 'fast-rng', 'serde'] }
